tests/spec/format/snapshots/call_with_spread_arg.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { foo(args...) }"
---
fn test() {
  foo(args...)
}
