tests/spec/format/snapshots/call_with_type_args.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { func<int>(arg) }"
---
fn test() {
  func<int>(arg)
}
