tests/spec/format/snapshots/cast_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x as int }"
---
fn test() {
  x as int
}
