tests/spec/format/snapshots/cast_with_generic.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { value as Option<int> }"
---
fn test() {
  value as Option<int>
}
