tests/spec/format/snapshots/chaining_dot_access.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { obj.field.nested.value }"
---
fn test() {
  obj.field.nested.value
}
