tests/spec/format/snapshots/chaining_method_calls.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { x.foo().bar().baz() }"
---
fn test() {
  x.foo().bar().baz()
}
