tests/spec/format/snapshots/chaining_mixed.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { obj.field.method().another.final_call() }"
---
fn test() {
  obj.field.method().another.final_call()
}
