tests/spec/format/snapshots/comment_and_blank_line_before_statement_remain_idempotent.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn foo() {
    let x = 1;
    // explanation
  
    let y = 2;
  }
---
fn foo() {
  let x = 1

  // explanation
  let y = 2
}
