tests/spec/format/snapshots/comment_before_first_enum_variant.snap
---
source: tests/spec/format/mod.rs
description: |-
  enum E {
    // before A
    A,
    B,
  }
---
enum E {
  // before A
  A,
  B,
}
