tests/spec/format/snapshots/comment_before_first_fn_param.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn f(
    // before first param
    a: int,
    b: int,
  ) -> int { a + b }
---
fn f(
  // before first param
  a: int,
  b: int,
) -> int {
  a + b
}
