tests/spec/format/snapshots/comment_before_first_interface_method.snap
---
source: tests/spec/format/mod.rs
description: |-
  interface I {
    // before first method
    fn first()
  }
---
interface I {
  // before first method
  fn first()
}
