tests/spec/format/snapshots/comment_before_interface_parent.snap
---
source: tests/spec/format/mod.rs
description: "input: interface I {\n  // before parent\n  impl A\n  fn first()\n}"
---
interface I {
  // before parent
  embed A
  fn first()
}
